--- a/app-of-app/homer.yaml
+++ b/app-of-app/homer.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     path: apps/homer
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
-    targetRevision: develop
+    targetRevision: main
     helm:
       valueFiles:
         - values.yaml
