--- a/app-of-app/cert-manager-issuers.yaml
+++ b/app-of-app/cert-manager-issuers.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     path: apps/cert-manager-issuers
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
-    targetRevision: develop
+    targetRevision: main
     helm:
       valueFiles:
         - values.yaml
