--- a/apps/minio/values.yaml
+++ b/apps/minio/values.yaml
@@ -284,6 +284,12 @@ console:
     labels: { }
     annotations:
       cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      more_set_headers "Access-Control-Allow-Origin: $http_origin";
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: X-Api-Key
+    nginx.ingress.kubernetes.io/cors-allow-methods: HEAD
+    nginx.ingress.kubernetes.io/enable-cors: "true"
     tls:
     - hosts:
       - minio.app.jyje.online
