--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     path: configs
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
-    targetRevision: main
+    targetRevision: develop
     directory:
       recurse: false
   project: default
