--- a/apps/homer/values.yaml
+++ b/apps/homer/values.yaml
@@ -5,6 +5,9 @@
 # https://github.com/bjw-s/helm-charts/blob/main/charts/library/common/values.yaml
 #
 
+controller:
+  replicas: 2
+
 image:
   # -- image repository
   repository: b4bz/homer
@@ -23,14 +26,10 @@ env:
 # @default -- See values.yaml
 service:
   main:
-    # ports:
-    #   http:
-    #     port: 8080
-    type: NodePort
+    type: ClusterIP
     ports:
       http:
         port: 8080
-        nodePort: 30080
 
 ingress:
   # -- Enable and configure ingress settings for the chart under this key.
