🔧 Change argocd: disable hpa

--- a/apps/argocd/values.yaml
+++ b/apps/argocd/values.yaml
@@ -1497,8 +1497,7 @@ server:
   ## Argo CD server Horizontal Pod Autoscaler
   autoscaling:
     # -- Enable Horizontal Pod Autoscaler ([HPA]) for the Argo CD server
-    # enabled: false
-    enabled: true
+    enabled: false
     # -- Minimum number of replicas for the Argo CD server [HPA]
     minReplicas: 1
     # -- Maximum number of replicas for the Argo CD server [HPA]
