--- a/configs/longhorn.yaml
+++ b/configs/longhorn.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: longhorn
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1000"
 spec:
   destination:
     namespace: longhorn-system
