--- a/configs/cert-manager-issuers.yaml
+++ b/configs/cert-manager-issuers.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cert-manager-issuers
+  annotations:
+    argocd.argoproj.io/hook: PreSync
 spec:
   destination:
     server: 'https://kubernetes.default.svc'
@@ -15,3 +17,5 @@ spec:
   project: default
   syncPolicy:
     automated: {}
+    retry:
+      limit: 20
