--- a/apps/homer/values.yaml
+++ b/apps/homer/values.yaml
@@ -176,7 +176,7 @@ configmap:
         #         tag: "app"
         #         url: "#"
         services:
-        - name: Core Apps
+        - name: Applications
           icon: fas fa-rocket
           items:
           - name: Grafana
@@ -193,7 +193,7 @@ configmap:
             tag: "argo-workflows #argo #workflow #pipeline #cicd"
             url: https://workflow.app.jyje.online
 
-        - name: Common Apps
+        - name: Management
           icon: fas fa-microchip
           items:
           - name: Homer
@@ -228,8 +228,18 @@ configmap:
             tag: "keycloak #login #iam #rabc"
             url: https://keycloak.app.jyje.online
 
-        - name: Storage
+
+        - name: Database
           icon: fas fa-database
+          items:
+          - name: CloudNativePG
+            logo: https://cloudnative-pg.io/images/hero_image.svg
+            subtitle: PostgreSQL operator
+            tag: "cnpg #operator #dbaas #psql #database"
+
+
+        - name: Storage
+          icon: fas fa-hdd
           items:
           - name: Longhorn
             logo: https://avatars.githubusercontent.com/u/51335366
@@ -239,15 +249,9 @@ configmap:
           - name: MinIO
             type: Ping
             logo: https://min.io/resources/img/logo/MINIO_Bird.png
-            subtitle: Object storage compatible with S3
+            subtitle: Object storage for Kubernetes
             tag: "minio #operator #dbaas #s3 #storage"
             url: https://minio.app.jyje.online
-
-          - name: CloudNativePG
-            logo: https://cloudnative-pg.io/images/hero_image.svg
-            subtitle: PostgreSQL database cluster
-            tag: "cnpg #operator #dbaas #psql #storage"
-
 
 
         # - name: Device
