🔧 Update cnpg cluster: cnpg-argo

--- a/apps/argo-workflows-resources/cnpg-argo.yaml
+++ b/apps/argo-workflows-resources/cnpg-argo.yaml
@@ -11,6 +11,9 @@ spec:
   # - supervised: requires manual supervision to perform
   #               the switchover of the primary
   primaryUpdateStrategy: unsupervised
+  enableSuperuserAccess: true
+  monitoring:
+    enablePodMonitor: true
 
   # Persistent storage configuration
   storage:
