--- a/configs/cert-manager.yaml
+++ b/configs/cert-manager.yaml
@@ -4,6 +4,7 @@ metadata:
   name: cert-manager
   annotations:
     argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   destination:
     namespace: cert-manager
@@ -20,5 +21,3 @@ spec:
     syncOptions:
       - CreateNamespace=true
     automated: {}
-    retry:
-      limit: 20
