--- a/apps/argo-workflows-minio-tenant/values.yaml
+++ b/apps/argo-workflows-minio-tenant/values.yaml
@@ -93,16 +93,16 @@ tenant:
     # The number of MinIO Tenant Pods / Servers in this pool.
     # For standalone mode, supply 1. For distributed mode, supply 4 or more.
     # Note that the operator does not support upgrading from standalone to distributed mode.
-    - servers: 1
+    - servers: 2
       ###
       # Custom name for the pool
-      name: pool-0
+      name: pool
       ###
       # The number of volumes attached per MinIO Tenant Pod / Server.
-      volumesPerServer: 1
+      volumesPerServer: 2
       ###
       # The capacity per volume requested per MinIO Tenant Pod.
-      size: 32Gi
+      size: 10Gi
       ###
       # The `storageClass <https://kubernetes.io/docs/concepts/storage/storage-classes/>`__ to associate with volumes generated for this pool.
       #
@@ -252,7 +252,7 @@ tenant:
   ###
   # The `PodManagement <https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#pod-management-policy>`__ policy for MinIO Tenant Pods. 
   # Can be "OrderedReady" or "Parallel"
-  podManagementPolicy: Parallel
+  podManagementPolicy: OrderedReady
   # The `Liveness Probe <https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes>`__ for monitoring Tenant pod liveness. 
   # Tenant pods will be restarted if the probe fails.
   liveness: { }
