--- a/configs/minio-tenant-r4iny.yaml
+++ b/configs/minio-tenant-r4iny.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-workflows-minio-tenant
+  name: minio-tenant-r4iny
 spec:
   destination:
-    namespace: argo
+    namespace: minio-tenant
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/argo-workflows-minio-tenant
+    path: apps/minio-tenant-r4iny
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
     helm:
