--- a/configs/cnpg-cluster-r4iny.yaml
+++ b/configs/cnpg-cluster-r4iny.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-workflows-resources
+  name: cnpg-cluster-r4iny
 spec:
   destination:
-    namespace: argo
+    namespace: cnpg-cluster
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/argo-workflows-resources
+    path: apps/cnpg-cluster-r4iny
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
   project: default
