--- a/apps/minio-tenant-r4iny/values.yaml
+++ b/apps/minio-tenant-r4iny/values.yaml
@@ -17,8 +17,8 @@
 #
 secrets:
   name: minio-r4iny-env-configuration
-  accessKey: minio 
-  secretKey: minio123
+  accessKey: admin 
+  secretKey: abc123abc123!
 ###
 # The name of an existing Kubernetes secret to import to the MinIO Tenant
 # The secret must contain a key ``config.env``.
@@ -96,7 +96,7 @@ tenant:
     - servers: 4
       ###
       # Custom name for the pool
-      name: r4iny
+      name: pool
       ###
       # The number of volumes attached per MinIO Tenant Pod / Server.
       volumesPerServer: 3
