--- a/apps/minio-tenant-r4iny/values.yaml
+++ b/apps/minio-tenant-r4iny/values.yaml
@@ -17,8 +17,8 @@
 #
 secrets:
   name: minio-r4iny-env-configuration
-  accessKey: admin 
-  secretKey: abc123abc123!
+  accessKey: minio 
+  secretKey: minio123
 ###
 # The name of an existing Kubernetes secret to import to the MinIO Tenant
 # The secret must contain a key ``config.env``.
