--- a/apps/infisical/values.yaml
+++ b/apps/infisical/values.yaml
@@ -153,6 +153,21 @@ mongodb:
     repository: mongo # bitnami/mongodb
     pullPolicy: IfNotPresent
     tag: "6.0.13-jammy" # "6.0.4-debian-11-r0"
+
+  command: [sh, -c]
+  # args: ["chown -R mongodb:mongodb /data/db && mongod"]
+  args: ["while true; do sleep 1 && echo tic; done"]
+
+  nodeSelector:
+    kubernetes.io/hostname: raspi-50
+
+  containerSecurityContext:
+    enabled: true
+    runAsUser: 1001
+    runAsNonRoot: false
+  podSecurityContext:
+    enabled: true
+    fsGroup: 1001
   ## Bitnami MongoDB(&reg;) pods' liveness probe
   ## ref: https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
   ## @param mongodb.livenessProbe.enabled Enable livenessProbe
