🔧 Update loki-stack: Add argo-workflow metrics (failed)

--- a/apps/loki-stack/values.yaml
+++ b/apps/loki-stack/values.yaml
@@ -92,6 +92,11 @@ prometheus:
         secretName: prometheus-letsencrypt-tls
     persistentVolume:
       size: 20Gi
+  extraScrapeConfigs: |
+    - job_name: argo-workflows
+      static_configs:
+        - targets:
+          - argo-workflow-controller.argo.svc.cluster.local:8080
 
 filebeat:
   enabled: false
