--- a/apps/argocd/values.yaml
+++ b/apps/argocd/values.yaml
@@ -779,7 +779,7 @@ controller:
   ## Application controller metrics configuration
   metrics:
     # -- Deploy metrics service
-    enabled: false
+    enabled: true # false
     applicationLabels:
       # -- Enables additional labels in argocd_app_labels metric
       enabled: false
