🔧 Update argo-workflows: apply 365d archiveTTL

--- a/apps/argo-workflows/values.yaml
+++ b/apps/argo-workflows/values.yaml
@@ -178,6 +178,7 @@ controller:
       maxOpenConns: 0
     nodeStatusOffLoad: true
     archive: true
+    archiveTTL: 365d
     postgresql:
       host: cnpg-cluster-r4iny-rw.cnpg-cluster.svc.cluster.local
       port: 5432
