--- a/configs/omv-nginx-proxy.yaml
+++ b/configs/omv-nginx-proxy.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx-proxy-omv
+  name: omv-nginx-proxy
 spec:
   destination:
     namespace: omv
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/nginx-proxy-omv
+    path: apps/omv-nginx-proxy
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
     helm:
