--- a/apps/argocd/templates/argocd-server/aws/ingress.yaml
+++ b/apps/argocd/templates/argocd-server/aws/ingress.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.server.ingress.enabled (eq .Values.server.ingress.controller "generic") }}
+{{- if and .Values.server.ingress.enabled (eq .Values.server.ingress.controller "aws") }}
 {{- $insecure := index .Values.configs.params "server.insecure" | toString -}}
 {{- $servicePort := eq $insecure "true" | ternary .Values.server.service.servicePortHttp .Values.server.service.servicePortHttps -}}
 apiVersion: networking.k8s.io/v1
@@ -11,12 +11,12 @@ metadata:
     {{- with .Values.server.ingress.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.server.ingress.annotations }}
   annotations:
-    {{- range $key, $value := . }}
+    alb.ingress.kubernetes.io/conditions.{{ include "argo-cd.server.fullname" . }}-grpc: |
+      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]
+    {{- range $key, $value := .Values.server.ingress.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
-  {{- end }}
 spec:
   {{- with .Values.server.ingress.ingressClassName }}
   ingressClassName: {{ . }}
@@ -33,6 +33,13 @@ spec:
             backend:
               service:
                 name: {{ include "argo-cd.server.fullname" . }}
+                port:
+                  number: {{ $servicePort }}
+          - path: {{ .Values.server.ingress.path }}
+            pathType: {{ $.Values.server.ingressGrpc.pathType }}
+            backend:
+              service:
+                name: {{ include "argo-cd.server.fullname" $ }}-grpc
                 port:
                   number: {{ $servicePort }}
     {{- range .Values.server.ingress.extraHosts }}
