--- a/apps/argocd/templates/argocd-server/serviceaccount.yaml
+++ b/apps/argocd/templates/argocd-server/serviceaccount.yaml
@@ -13,7 +13,7 @@ metadata:
   {{- end }}
   labels:
     {{- include "argo-cd.labels" (dict "context" . "component" .Values.server.name "name" .Values.server.name) | nindent 4 }}
-    {{- range $key, $value := .Values.server.serviceAccount.labels }}
+    {{- with .Values.server.serviceAccount.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
 {{- end }}
