🔧 cnpg-cluster-r4iny: ✨ Add annotation for reflection-allowed

--- a/apps/cnpg-cluster-r4iny/cnpg-cluster.yaml
+++ b/apps/cnpg-cluster-r4iny/cnpg-cluster.yaml
@@ -2,6 +2,8 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: cnpg-cluster-r4iny
+  annotations:
+    reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
 spec:
   instances: 3
 
