--- a/apps/cloudnative-pg/values.yaml
+++ b/apps/cloudnative-pg/values.yaml
@@ -58,10 +58,12 @@ config:
   # -- The content of the configmap/secret, see
   # https://cloudnative-pg.io/documentation/current/operator_conf/#available-options
   # for all the available options.
-  data: {}
-  # INHERITED_ANNOTATIONS: categories
-  # INHERITED_LABELS: environment, workload, app
-  # WATCH_NAMESPACE: namespace-a,namespace-b
+  # data: {}
+    # INHERITED_ANNOTATIONS: categories
+    # INHERITED_LABELS: environment, workload, app
+    # WATCH_NAMESPACE: namespace-a,namespace-b
+  data:
+    INHERITED_ANNOTATIONS: "reflector.v1.k8s.emberstack.com/reflection-allowed"
 
 # -- Additinal arguments to be added to the operator's args list.
 additionalArgs: []
