--- a/aoa.yaml
+++ b/aoa.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: config
+  name: aoa
   namespace: argocd
 spec:
   destination:
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: configs
+    path: helm-charts
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
     directory:
