--- a/apps/argo-workflows-resources.yaml
+++ b/apps/argo-workflows-resources.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: loki-stack
+  name: argo-workflows-resources
 spec:
   destination:
-    namespace: monitoring
+    namespace: argo
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/loki-stack
+    path: helm-charts/argo-workflows-resources
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
