--- a/apps/cert-manager-issuers.yaml
+++ b/apps/cert-manager-issuers.yaml
@@ -1,20 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minio-operator
+  name: cert-manager-issuers
 spec:
   destination:
-    namespace: minio-operator
+    namespace: cert-manager
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/minio-operator
+    path: helm-charts/cert-manager-issuers
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
-    syncOptions:
-      - CreateNamespace=true
     automated: {}
