--- a/apps/cert-manager.yaml
+++ b/apps/cert-manager.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: minio-tenant-r4iny
+  name: cert-manager
 spec:
   destination:
-    namespace: minio-tenant
+    namespace: cert-manager
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/minio-tenant-r4iny
+    path: helm-charts/cert-manager
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
