--- a/apps/cnpg-cluster-r4iny.yaml
+++ b/apps/cnpg-cluster-r4iny.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argo-workflows
+  name: cnpg-cluster-r4iny
 spec:
   destination:
-    namespace: argo
+    namespace: cnpg-cluster
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/argo-workflows
+    path: helm-charts/cnpg-cluster-r4iny
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
