--- a/apps/loki-stack.yaml
+++ b/apps/loki-stack.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: longhorn
+  name: loki-stack
 spec:
   destination:
-    namespace: longhorn-system
+    namespace: monitoring
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/longhorn
+    path: helm-charts/loki-stack
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
