--- a/apps/longhorn.yaml
+++ b/apps/longhorn.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cnpg
+  name: longhorn
 spec:
   destination:
-    namespace: cnpg-system
+    namespace: longhorn-system
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/cloudnative-pg
+    path: helm-charts/longhorn
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
