--- a/apps/omv-nginx-proxy.yaml
+++ b/apps/omv-nginx-proxy.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: omv-nginx-proxy
 spec:
   destination:
-    namespace: cert-manager
+    namespace: omv
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/cert-manager
+    path: helm-charts/omv-nginx-proxy
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
