--- a/apps/portainer.yaml
+++ b/apps/portainer.yaml
@@ -1,18 +1,15 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: argocd
+  name: portainer
 spec:
   destination:
-    namespace: argocd
+    namespace: portainer
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/argocd
+    path: helm-charts/portainer
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
