--- a/candidates/secrets-operator.yaml
+++ b/candidates/secrets-operator.yaml
@@ -7,12 +7,9 @@ spec:
     namespace: infisical
     server: 'https://kubernetes.default.svc'
   source:
-    path: apps/secrets-operator
+    path: helm-charts/secrets-operator
     repoURL: 'git@github.com:jyje/r4spi-app-deployment.git'
     targetRevision: develop
-    helm:
-      valueFiles:
-        - values.yaml
   project: default
   syncPolicy:
     syncOptions:
