🔧 helm-charts: Update minio-operator

--- a/helm-charts/minio-operator/templates/operator-serviceaccount.yaml
+++ b/helm-charts/minio-operator/templates/operator-serviceaccount.yaml
@@ -4,3 +4,7 @@ metadata:
   name: minio-operator
   namespace: {{ .Release.Namespace }}
   labels: {{- include "minio-operator.labels" . | nindent 4 }}
+  {{- with .Values.operator.serviceAccountAnnotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
