--- a/helm-charts/minio-operator/values.yaml
+++ b/helm-charts/minio-operator/values.yaml
@@ -27,17 +27,19 @@ operator:
   env:
     - name: OPERATOR_STS_ENABLED
       value: "on"
+  # An array of additional annotations to be applied to the operator service account
+  serviceAccountAnnotations: []
   ###
   # Specify the Operator container image to use for the deployment.
   # ``image.tag`` 
-  # For example, the following sets the image to the ``quay.io/minio/operator`` repo and the v5.0.11 tag.
+  # For example, the following sets the image to the ``quay.io/minio/operator`` repo and the v5.0.14 tag.
   # The container pulls the image if not already present:
   #
   # .. code-block:: yaml
   # 
   #    image:
   #      repository: quay.io/minio/operator
-  #      tag: v5.0.11
+  #      tag: v5.0.14
   #      pullPolicy: IfNotPresent
   #
   # The chart also supports specifying an image based on digest value:
@@ -51,7 +53,7 @@ operator:
   #
   image:
     repository: quay.io/minio/operator
-    tag: v5.0.11
+    tag: v5.0.14
     pullPolicy: IfNotPresent
   ###
   #
@@ -154,9 +156,9 @@ operator:
   # If no worker nodes can meet the specified requests, the Operator may fail to deploy.
   resources:
     requests:
-      cpu: 150m
-      memory: 250Mi
-      ephemeral-storage: 200Mi
+      cpu: 200m
+      memory: 256Mi
+      ephemeral-storage: 500Mi
 
 ###
 # Root key for Operator Console
@@ -169,14 +171,14 @@ console:
   ###
   # Specify the Operator Console container image to use for the deployment.
   # ``image.tag`` 
-  # For example, the following sets the image to the ``quay.io/minio/operator`` repo and the v5.0.11 tag.
+  # For example, the following sets the image to the ``quay.io/minio/operator`` repo and the v5.0.14 tag.
   # The container pulls the image if not already present:
   #
   # .. code-block:: yaml
   # 
   #    image:
   #      repository: quay.io/minio/operator
-  #      tag: v5.0.11
+  #      tag: v5.0.14
   #      pullPolicy: IfNotPresent
   #
   # The chart also supports specifying an image based on digest value:
@@ -191,7 +193,7 @@ console:
   # The specified values should match that of ``operator.image`` to ensure predictable operations.
   image:
     repository: quay.io/minio/operator
-    tag: v5.0.11
+    tag: v5.0.14
     pullPolicy: IfNotPresent
   ###
   # An array of environment variables to pass to the Operator Console deployment.
@@ -216,7 +218,7 @@ console:
   #
   # The cluster must have sufficient number of available worker nodes to fulfill the request.
   # Console pods deploy with pod anti-affinity by default, preventing Kubernetes from scheduling multiple pods onto a single Worker node.
-  replicaCount: 2
+  replicaCount: 1
   ###
   # Any `Node Selectors <https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/>`__ to apply to Operator Console pods.
   #
@@ -259,8 +261,8 @@ console:
   # If no worker nodes can meet the specified requests, the Console may fail to deploy.
   resources:
     requests:
-      cpu: 50m
-      memory: 50Mi
+      cpu: 0.25
+      memory: 512Mi
   ###
   # The Kubernetes `SecurityContext <https://kubernetes.io/docs/tasks/configure-pod-container/security-context/>`__ to use for deploying Operator Console resources.
   #
